--- a/index.html
+++ b/index.html
@@ -232,14 +232,14 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="courses.html" class="nav-item nav-link">Programs</a>
+                <a href="#" class="nav-item nav-link">About</a>
+                <a href="#" class="nav-item nav-link">Programs</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Programmes</a>
                     <div class="dropdown-menu fade-down m-0">
-                        <a href="team.html" class="dropdown-item">M.Sc</a>
-                        <a href="testimonial.html" class="dropdown-item">PhD</a>
-                        <a href="404.html" class="dropdown-item">PGD</a>
+                        <a href="#" class="dropdown-item">M.Sc</a>
+                        <a href="#" class="dropdown-item">PhD</a>
+                        <a href="#" class="dropdown-item">PGD</a>
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -263,7 +263,7 @@
                                 <h2 class=" text-white animated slideInDown">Pan African School Of Public Health And Trophical Medicine</h2><br>
                                 <p class="fs-5 text-white mb-4 pb-2">
                                     "Empowering the next generation of public health leaders to transform health and well-being across Africa and beyond."</p>
-                                <a href="about.html" class="btn w3-win8-emerald py-md-3 px-md-5 me-3 animated slideInLeft w3-round-lg" style="background-color: rgb(17, 173, 17); color: white;">Read More</a>
+                                <a href="#" class="btn w3-win8-emerald py-md-3 px-md-5 me-3 animated slideInLeft w3-round-lg" style="background-color: rgb(17, 173, 17); color: white;">Read More</a>
                                 <a href="" class="btn btn- py-md-3 px-md-5 animated slideInRight">     </a>
                             </div>
                         </div>
@@ -279,7 +279,7 @@
                                 <h1 class="w3-text- text-uppercase mb-2 animated slideInDown" style="padding-bottom: 20px; color: white;">Our Commitment</h1>
                                 <h5 class="display-6 text-white animated slideInDown"> To Excellence</h5><br>
                                 <p class="fs-5 text-white mb-4 pb-2">Leading the way in public health education, research, and advocacy with a legacy of innovation and a vision for a healthier world.</p>
-                                <a href="about.html" class="btn w3-win8-emerald py-md-3 px-md-5 me-3 animated slideInLeft w3-round-lg" style="background-color: rgb(17, 173, 17); color: white;">Read More</a>
+                                <a href="#" class="btn w3-win8-emerald py-md-3 px-md-5 me-3 animated slideInLeft w3-round-lg" style="background-color: rgb(17, 173, 17); color: white;">Read More</a>
                                 <a href="" class="btn btn- py-md-3 px-md-5 animated slideInRight">    </a>
                             </div>
                         </div>
@@ -353,10 +353,10 @@
 
 
     <!-- About Start -->
-    <div class="container-xxl py-5">
+    <div class="container-fluid py-5">
         <div class="container">
             <div class="row g-5">
-                <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
+                <div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
                         <img class="img-fluid position-absolute w-150 h-100" src="img/logoblue.png" alt="" style="object-fit: cover;">
                     </div>
@@ -395,7 +395,7 @@
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>International Certificate</p>
                         </div>
                     </div-->
-                    <a class="btn w3-win8-emerald py-3 px-5 mt-2" href="about.html">Read More</a>
+                    <a class="btn w3-win8-emerald py-3 px-5 mt-2" href="#">Read More</a>
                 </div>
             </div>
         </div>
@@ -531,8 +531,8 @@
 
 
     <!-- Team Start -->
-    <div class="container-fluid py-5 wow fadeInUp w3-round-lg" data-wow-delay="0.5s">
-        <div class="container-fluid">
+    <div class=" py-5 wow fadeInUp w3-round-lg" data-wow-delay="0.5s">
+        <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <h3 class="section-title bg-white text-center text-green px-3">Why Choose Us</h3> <br><br>
             </div>
