--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="course-item bg-light">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/course-1.jpg" alt="">
+                            <img class="img-fluid" src="img/masters-degree.jpg" alt="">
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                 <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Read More</a>
 
@@ -490,7 +490,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="course-item bg-light">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/course-2.jpg" alt="">
+                            <img class="img-fluid" src="img/phd.jpg" alt="">
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                 <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Read More</a>
                             </div>
@@ -508,7 +508,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="course-item bg-light">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/course-3.jpg" alt="">
+                            <img class="img-fluid" src="img/pgd.jpg" alt="">
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                 <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Read More</a>
                             </div>
@@ -544,7 +544,7 @@
               <h3 class="p-3 mb-1 nunito" style="font-size: 16px; color: white; padding-top: 15px;">At the Pan African School of Public Health and Tropical Medicine, we are committed to excellence in education
                 , research, and community engagement. Here are just a few reasons why you should choose us:</h3>
                       <br>
-<ul class="px-lg-5 mb-5 nunito" style="font-size: 15px; ">
+<ul class="px-lg-5 mb-5 nunito" style="font-size: 15px; margin: auto;">
 
     <li><strong>Pioneers in Public Health:</strong> As the first public health school in Africa, we lead with a legacy of innovation and excellence.</li><br>
     <li><strong>Expert Faculty:</strong> Learn from world-renowned experts dedicated to your success and growth in public health.</li><br>
@@ -703,7 +703,7 @@
             <div class="row g-5">
                 <div class="col-lg-5 col-md-5 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="img-fluid position-absolute w-100 h-100" src="img/" alt="" style="width: fit-content; height: 300px;">
+                        <!--img class="img-fluid position-absolute w-100 h-100" src="img/" alt="" style="width: fit-content; height: 300px;"-->
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
