--- a/index.html
+++ b/index.html
@@ -358,10 +358,10 @@
             <div class="row g-5">
                 <div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="img-fluid position-absolute w-150 h-100" src="img/logoblue.png" alt="" style="object-fit: cover;">
+                        <img class="img-fluid position-absolute w-150 h-100" src="img/logoblue.png" alt="" style="object-fit: cover; width: max-content;">
                     </div>
                 </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="col-lg-6 wow fadeInUpv pt-3 p-4" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start text-dar pe-3">About Us</h6>
                     <h4 class="mb-4">Welcome to P-A-S-P-H-T-M</h4>
                     <p class="mb-4 nunito" style="font-size: 15px;">In 2024, the Pan-African School of Public Health and Tropical Medicine (PANSPHTM)
