--- a/index.html
+++ b/index.html
@@ -353,11 +353,11 @@
 
 
     <!-- About Start -->
-    <div class="container-fluid py-5">
+    <div class="container-fluid py-5 w3-mobile">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
-                    <div class="position-relative h-100">
+                    <div class="position-relative h-100 ">
                         <img class="img-fluid position-absolute w-150 h-100" src="img/logoblue.png" alt="" style="object-fit: cover; width: max-content;">
                     </div>
                 </div>
@@ -531,8 +531,8 @@
 
 
     <!-- Team Start -->
-    <div class=" py-5 wow fadeInUp w3-round-lg" data-wow-delay="0.5s">
-        <div class="container">
+    <div class=" py-5 wow fadeInUp w3-round-lg w3-mobile" data-wow-delay="0.5s" style="margin: 5px 8px 5px 8px ;">
+        <div class="container-fluid">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <h3 class="section-title bg-white text-center text-green px-3">Why Choose Us</h3> <br><br>
             </div>
@@ -541,7 +541,7 @@
                     <div class="team-item" style=" background-color: rgb(1, 71, 1); color: white; ">
                         <div class="overflow-hidden">                      <br>
 
-              <h3 class="p-3 mb-1 nunito" style="font-size: 16px; color: white; padding-top: 15px;">At the Pan African School of Public Health and Tropical Medicine, we are committed to excellence in education
+              <h3 class="p-3 mb-1 nunito px-3" style="font-size: 16px; color: white; padding-top: 15px;">At the Pan African School of Public Health and Tropical Medicine, we are committed to excellence in education
                 , research, and community engagement. Here are just a few reasons why you should choose us:</h3>
                       <br>
 <ul class="px-lg-5 mb-5 nunito" style="font-size: 15px; margin: auto;">
