fixed why choose us

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 
     <!-- Team Start -->
     <div class=" py-5 wow fadeInUp w3-round-lg w3-mobile" data-wow-delay="0.5s" style="margin: 5px 8px 5px 8px ;">
-        <div class="container-fluid">
+        <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <h3 class="section-title bg-white text-center text-green px-3">Why Choose Us</h3> <br><br>
             </div>
@@ -544,7 +544,7 @@
               <h3 class="p-3 mb-1 nunito px-3" style="font-size: 16px; color: white; padding-top: 15px;">At the Pan African School of Public Health and Tropical Medicine, we are committed to excellence in education
                 , research, and community engagement. Here are just a few reasons why you should choose us:</h3>
                       <br>
-<ul class="px-lg-5 mb-5 nunito" style="font-size: 15px; margin: auto;">
+<ul class="px-lg-5 mb-5 nunito container" style="font-size: 15px; margin: auto;">
 
     <li><strong>Pioneers in Public Health:</strong> As the first public health school in Africa, we lead with a legacy of innovation and excellence.</li><br>
     <li><strong>Expert Faculty:</strong> Learn from world-renowned experts dedicated to your success and growth in public health.</li><br>
