--- a/about.html
+++ b/about.html
@@ -209,7 +209,7 @@
 
 <body>
     <!-- Spinner Start -->
-    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+    <div id="spinner" class="show bg-light position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
 
         <div class="spinner-border text-green" style="width: 4rem; height: 4rem;" role="status">
             <span class="sr-only"></span>
