--- a/index.html
+++ b/index.html
@@ -626,8 +626,8 @@
   
           <div class="row gy-4">
   
-            <div class="col-lg-6">
-              <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="200">
+            <div class="col-lg-6 ">
+              <div class="bg-light info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="200">
                 <i class="bi bi-geo-alt"></i>
                 <h3>Address</h3>
                 <p>FCT, Abuja Nigeria</p>
@@ -635,15 +635,15 @@
             </div><!-- End Info Item -->
   
             <div class="col-lg-3 col-md-6">
-              <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="300">
+              <div class=" bg-light info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="300">
                 <i class="bi bi-telephone"></i>
                 <h3>Call Us</h3>
                 <p>+234 5589 55488 55</p>
               </div>
             </div><!-- End Info Item -->
   
-            <div class="col-lg-3 col-md-6">
-              <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="400">
+            <div class="col-lg-3 col-md-6 ">
+              <div class=" bg-light info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="400">
                 <i class="bi bi-envelope"></i>
                 <h3>Email Us</h3>
                 <p>info@pasphtm.org</p>
@@ -662,7 +662,7 @@
                 <div class="row gy-4">
   
                   <div class="col-md-6">
-                    <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
+                    <input type="text" name="name" class="form-control " placeholder="Your Name" required="">
                   </div>
   
                   <div class="col-md-6 ">
@@ -682,7 +682,7 @@
                     <div class="error-message"></div>
                     <div class="sent-message">Your message has been sent. Thank you!</div>
   
-                    <button type="submit">Send Message</button>
+                    <button class="nunito" style="font-size: 15px;" type="submit">Send Message</button>
                   </div>
   
                 </div>
