--- a/index.html
+++ b/index.html
@@ -652,12 +652,12 @@
   
           </div>
   
-          <div class="row gy-4 mt-1">
+          <!--div class="row gy-4 mt-1">
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
               <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 400px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div><!-- End Google Maps -->
+            </div><!-- End Google Maps >
   
-            <div class="col-lg-6">
+            <div class="col-lg-6 " style="display: flexbox; align-self: center;" >
               <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="400">
                 <div class="row gy-4">
   
@@ -696,9 +696,10 @@
       </section><!-- /Contact Section -->
   
      <!-- About Start -->
+     <h3 class=" container bg-white te  pe-3 w3-center setion-title"  style="margin-bottom: 7px;">News & Events</h3>
     <div class="container-xxl py-5">
         <div class="container bg-light">
-            <h3 class="bg-white text-start text-dar pe-3 w3-center">News & Events</h3>
+         
 
             <div class="row g-5">
                 <div class="col-lg-5 col-md-5 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
