--- a/contact.html
+++ b/contact.html
@@ -234,7 +234,7 @@ font-style: normal;
             <a href="#" class="nav-item nav-link">About</a>
             <a href="#" class="nav-item nav-link">Programs</a>
             <div class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Programmes</a>
+                <a href="programmes.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Programmes</a>
                 <div class="dropdown-menu fade-down m-0">
                     <a href="#" class="dropdown-item">M.Sc</a>
                     <a href="#" class="dropdown-item">PhD</a>
