--- a/about.html
+++ b/about.html
@@ -233,7 +233,7 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0 nunito">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="#" class="nav-item nav-link">Programs</a>
+                <a href="programmes.html" class="nav-item nav-link">Programs</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Programmes</a>
                     <div class="dropdown-menu fade-down m-0">
