--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="#" class="nav-item nav-link">Programs</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Programmes</a>
+                    <a href="programmes" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Programmes</a>
                     <div class="dropdown-menu fade-down m-0">
                         <a href="#" class="dropdown-item">M.Sc</a>
                         <a href="#" class="dropdown-item">PhD</a>
