--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>eLEARNING - eLearning HTML Template</title>
+    <title>Contact | PASPHTM</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
+    <meta name="keywords" content="Pan African School of Public Health, PASPHTM, P-A-S-P-H-I-M, Public Health, Tropical Medicine, Public Health Education, Public Health Research, Africa Public Health, Sub-Sahara Health, Health Equity, Health Well-being, Public Health Programs, Undergraduate Public Health, Graduate Public Health, Professional Public Health Programs, Public Health Degrees, Public Health Curriculum, Public Health Courses, Public Health Admissions, Scholarships, Financial Aid, Public Health Faculty, Health Leadership, Health Innovation, Health Advocacy, Public Health Research Centers, Health Publications, Student Research, Community Health Programs, Health Partnerships, Global Health, Health Collaborations, Public Health Initiatives, Public Health News, Health Events, Public Health Seminars, Health Workshops, Health Conferences, Public Health Impact, Health Success Stories, Public Health Careers, Health Support, Health Donations, Health Volunteering, Health Internships, Public Health Opportunities, Health Fellowships, Health Internships, Health Outreach, Public Health Campaigns, Health Education, Public Health Training, Health Empowerment, Public Health Policy, Health Development, Health Projects, Health Achievements, Health Experts, Public Health Leaders, Health Scholars, Health Well-being Programs, Optimal Health, Health Sustainability, Health Challenges, Public Health Impact, Health Awareness, Health Interventions, Health Strategies, Public Health Solutions, Health Initiatives, Health Research Projects, Health Science, Health Promotion, Health Prevention, Health Care, Public Health Advocacy, Health Equity Initiatives, Health Diversity, Health Excellence, Health Discovery, Health Balance, Health Legacy, Health Community, Health Collaboration, Health Diversity, Health Well-being, Public Health Vision, Health Mission, Africa Health, Public Health Africa, Tropical Diseases, Health Resilience, Public Health Education Africa, Health Research Africa, Africa Health Innovation, Africa Health Leaders">
     <meta content="" name="description">
+    <link rel="stylesheet" href="w3.css">
 
    <!-- Favicon -->
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -232,7 +233,7 @@ font-style: normal;
         <div class="navbar-nav ms-auto p-4 p-lg-0 nunito">
             <a href="index.html" class="nav-item nav-link active">Home</a>
             <a href="#" class="nav-item nav-link">About</a>
-            <a href="#" class="nav-item nav-link">Programs</a>
+            <a href="#" class="nav-item nav-link">Resourses</a>
             <div class="nav-item dropdown">
                 <a href="programmes.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Programmes</a>
                 <div class="dropdown-menu fade-down m-0">
@@ -271,7 +272,7 @@ font-style: normal;
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h5 class="nunito" style="text-decoration: underline; color: green; m">Get In Touch</h5><br>
-                    <p class="mb-4 nunito" style="font-size:17px">We're here to help! If you have any questions, need more information, or want to get in touch, please contact us:</a>.</p>
+                    <p class="mb-4 nunito" style="font-size:17px;">We're here to help! If you have any questions, need more information, or want to get in touch, please contact us:</a>.</p>
                     <div class="d-flex align-items-center mb-3">
                         <div class="d-flex align-items-center justify-content-center flex-shrink-0 w3-round-lg" style="width: 45px; height: 45px; background-color: green; border-radius: 5px;">
                             <i class="fa fa-map-marker-alt " style="color: white ;"></i>
