--- a/contact.html
+++ b/contact.html
@@ -308,7 +308,8 @@ font-style: normal;
                         tabindex="0"></iframe>
                 </div>
                 <div class="col-lg-4 col-md-12 wow fadeInUp" data-wow-delay="0.5s">
-                    <form>
+                    <form> <br>
+                        <h3 class="w3-center nunito" style="font-size:19px; color: green;">Send Us A Message Now</h3>
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
