--- a/contact.html
+++ b/contact.html
@@ -237,6 +237,7 @@ font-style: normal;
             <div class="nav-item dropdown">
                 <a href="programmes.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Programmes</a>
                 <div class="dropdown-menu fade-down m-0">
+                    <a href="programmes.html" class="dropdown-item">All Programmes</a>
                     <a href="#" class="dropdown-item">M.Sc</a>
                     <a href="#" class="dropdown-item">PhD</a>
                     <a href="#" class="dropdown-item">PGD</a>
