--- a/index.html
+++ b/index.html
@@ -697,6 +697,9 @@
   
      <!-- About Start -->
      <h3 class=" container bg-white te  pe-3 w3-center setion-title"  style="margin-bottom: 7px;">News & Events</h3>
+     <P class="container bg-white te  pe-3 w3-center">Stay updated with the latest developments, announcements, and stories from the Pan African School of Public 
+        Health and Tropical Medicine. Our news section provides you with current information about our programs,
+         research breakthroughs, events, and other important updates.</P>
     <div class="container-xxl py-5">
         <div class="container bg-light">
          
