fixed a lot, faq but supreme

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,10 @@
     <meta content="" name="description">
     <link rel="stylesheet" href="w3.css">
 
+     <!--chatbot-->
+     <script src="//code.jivosite.com/widget/Lx7qaqUTxD" async></script>
+     <!--end of bot-->
+
    <!-- Favicon -->
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
